yaml/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quarkus
  name: quarkus
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: quarkus
    weight: 100
